2011-06-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-via-smtp): Make sure we don't send
	QUIT twice.

2011-06-22  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-default-specifiers)
	(display-buffer-alist): Remove entries for pop-up-frame-alist.
	Suggested by Katsumi Yamaoka <yamaoka@jpl.org>.

	* frame.el (pop-up-frame-alist, pop-up-frame-function)
	(special-display-frame-alist, special-display-popup-frame):
	Remove duplicate declarations.  These are now in window.el.

2011-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail/smtpmail.el (smtpmail-via-smtp): Set
	:use-starttls-if-possible so that we always use STARTTLS if the
	server supports it.  SMTP servers that support STARTTLS commonly
	require it.

	* net/network-stream.el (network-stream-open-starttls): Support
	upgrading to STARTTLS always, even if we don't have built-in support.
	(open-network-stream): Add the :always-query-capabilies keyword.

	* mail/smtpmail.el: Rewritten to do opportunistic STARTTLS
	upgrades with `open-network-stream', and rely solely on
	auth-source for all credentials.  Big changes throughout the file,
	but in particular:
	(smtpmail-auth-credentials): Removed.
	(smtpmail-starttls-credentials): Removed.
	(smtpmail-via-smtp): Check for servers saying they want AUTH after
	MAIL FROM, too.

	* net/network-stream.el (network-stream-open-starttls): Provide
	support for client certificates both for external and built-in
	STARTTLS.
	(auth-source): Require.
	(open-network-stream): Document the :client-certificate keyword.
	(network-stream-certificate): Change cert-cert to cert and
	cert-key to key.

2011-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (top): Don't load the persistency file when
	"emacs -Q" has been called.

2011-06-21  Tim Harper  <timcharper@gmail.com>

	* term/ns-win.el (ns-initialize-window-system): set
	application-specific `ApplePressAndHoldEnabled' system