@@ -8,6 +8,7 @@
 	* window.el (display-buffer-default-specifiers)
 	(display-buffer-alist): Remove entries for pop-up-frame-alist.
 	Suggested by Katsumi Yamaoka <yamaoka@jpl.org>.
+	(split-window): Normalize SIDE argument (Bug#8916).
 
 	* frame.el (pop-up-frame-alist, pop-up-frame-function)
 	(special-display-frame-alist, special-display-popup-frame):
